syntax = "proto3";

option go_package="./;proto";

package proto;

service SayHello {
  rpc HelloWorld (HelloRequest) returns (HelloReply) {}
}



message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

